--- a/public/Views/Application/userDashboard.html
+++ b/public/Views/Application/userDashboard.html
@@ -80,13 +80,11 @@
 
         <div class="panel panel-primary">
             <div class="panel-heading text-center">
-                <h4>Una Mano a Mi Ciudad
-                    <i class="fa fa-chevron-circle-right"></i>
+                <div class="text-right">
 
-                    <i class="fa fa-chevron-circle-right"></i>
-
-                </h4>
+                <img src="/images/logorm.png" style="width:12% ;">
             </div>
+           </div>
 
             <div class="panel-body">
 
